--- a/Css/index.css
+++ b/Css/index.css
@@ -27,7 +27,7 @@
 
 * button {
   font-family: proxima-soft, sans-serif;
-  background-color: red;
+  background-color: blue;
   font-size: 80px;
 }
 
