--- a/Css/index.scss
+++ b/Css/index.scss
@@ -21,9 +21,7 @@ body{
                         h1{
                         }
                         p{}
-                        button{
-                            background-color: red;
-                        }
+                        button{}
                     }
                 }
             }
