--- a/scss/login.css
+++ b/scss/login.css
@@ -33,15 +33,6 @@
   font-size: 3.125rem;
 }
 
-<<<<<<< HEAD
-* button {
-  font-family: proxima-soft, sans-serif;
-  background-color: blue;
-  font-size: 80px;
-}
-
-=======
->>>>>>> 05629a6ba35502d0e289780cc3222687be13bcc1
 body .fullpage nav {
   height: 8vh;
   position: fixed;
@@ -174,123 +165,36 @@ body .fullpage footer .column3-footer .column3-footer-info .info a {
   color: #fdfffc;
 }
 
-body {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#74E3CF), color-stop(#CCF2EB), to(#CCF2EB));
-  background-image: linear-gradient(#74E3CF, #CCF2EB, #CCF2EB);
-  overflow-x: hidden;
-}
-
 body .fullpage main {
   margin-top: 8vh;
-}
-
-body .fullpage main .row-koop-nu {
   height: 92vh;
 }
 
-body .fullpage main .row-koop-nu .col-koop-nu-foto img {
-  max-height: 80%;
+@media only screen and (max-width: 768px) {
+  body .fullpage main {
+    height: auto;
+  }
 }
 
-body .fullpage main .row-koop-nu .col-koop-nu-info .sun {
-  z-index: -1;
-  top: -200px;
-  left: 500px;
-}
-
-body .fullpage main .row-specs {
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  height: 92vh;
-}
-
-body .fullpage main .row-specs .row-specs-title {
-  height: 15%;
-}
-
-body .fullpage main .row-specs .row-specs-content {
-  height: 75%;
-}
-
-body .fullpage main .row-specs .row-specs-content div img {
-  max-width: 80%;
-  height: auto;
-}
-
-body .fullpage main .row-specs .row-specs-content .cloud1 {
-  z-index: -1;
-  top: -50px;
-  left: -350px;
-}
-
-body .fullpage main .row-specs .row-specs-content .cloud2 {
-  z-index: -1;
-  top: 500px;
-}
-
-body .fullpage main .row-myping {
-  height: 92vh;
-}
-
-body .fullpage main .row-myping .row-myping-mockup {
-  position: relative;
-}
-
-body .fullpage main .row-myping .row-myping-mockup .mockup1 {
-  height: 75%;
-}
-
-body .fullpage main .row-myping .row-myping-mockup .mockup2 {
-  z-index: -1;
-  position: absolute;
-  height: 71%;
-  left: 150px;
-  bottom: 125px;
-}
-
-body .fullpage main .row-myping .row-myping-info {
+body .fullpage main .login-box {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
 }
 
-body .fullpage main .row-myping .row-myping-info .row-myping-info-box {
-  height: 60vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+body .fullpage main .login-box .login {
+  padding-left: 150px !important;
 }
 
-body .fullpage main .row-myping .row-myping-info .cloud3 {
-  z-index: -2;
-  top: 380px;
-  right: -225px;
+body .fullpage main .login-box .login .login-header h1 {
+  font-family: cubano, sans-serif;
 }
 
-body .fullpage main .row-overping {
-  height: 92vh;
+body .fullpage main .login-box .registreer {
+  height: 100%;
+  background-color: #DEEFED;
+  padding-right: 150px !important;
 }
 
-body .fullpage main .row-overping .row-overping-tekstblokken .team-focus-missie h4 {
-  font-family: proxima-soft, sans-serif;
-  font-weight: 600;
-  margin-bottom: 3rem;
+body .fullpage main .login-box .registreer .registreer-header {
+  font-family: cubano, sans-serif;
 }
-
-body .fullpage main .row-overping .cloud4 {
-  z-index: -1;
-  top: -100px;
-  left: -200px;
-}
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=login.css.map */
