--- a/scss/index.css
+++ b/scss/index.css
@@ -6,6 +6,7 @@
 * .custom-button {
   font-family: proxima-soft, sans-serif;
   background-color: #ff9f1c !important;
+  color: #fdfffc;
   border: none !important;
   border-radius: 5px;
   padding: 12px 40px;
@@ -31,6 +32,10 @@
 * h1 {
   font-family: cubano, sans-serif;
   font-size: 3.125rem;
+}
+
+* input {
+  max-width: 350px;
 }
 
 body .fullpage nav {
@@ -64,13 +69,9 @@ body .fullpage nav div {
           justify-content: flex-end;
 }
 
-body .fullpage nav div .navigation-list {
-  color: #011627;
-}
-
 body .fullpage nav div .navigation-list li a {
   padding: 0;
-  color: #011627;
+  color: #011627 !important;
 }
 
 body .fullpage nav div .navigation-list li a ion-icon {
