--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -26,7 +26,8 @@ body{
                                 label{
                                     font-family: $bodyFont;
                                 }
-                                input{}
+                                input{
+                                }
                                 textarea{
                                     resize: none;
                                 }
