--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -30,15 +30,14 @@
         font-family: $headerFont;
         font-size: $headerFontSize;
     }
-    input{
-        max-width: 350px;
-    }
     box-sizing: border-box;
 }
 
 // Navigation
 %navigation{
     nav{
+        background-color: #fff;
+        box-shadow: 0 1px 6px 0 rgba(33, 33, 33, 0.25);
         height: 8vh;
         position: fixed;
         width: 100%;
@@ -55,7 +54,50 @@
             margin: 0;
         }
         button{
-            span{}
+            border: none;
+            span{
+                .hamburger{
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 40px;
+                    height: 40px;
+                    cursor: pointer;
+                    transition: all 0.5s ease-in-out;
+                    .hamburgermenu{
+                        width: 50px;
+                        height: 5px;
+                        background-color: black;
+                        border-radius: 5px;
+                        transition: all 0.5s ease-in-out;
+                        &::before, &::after{
+                            content: "";
+                            position: absolute;
+                            width: 40px;
+                            height: 5px;
+                            background: black;
+                            border-radius: 5px;
+                            transition: all 0.5s ease-in-out;
+                        }
+                        &::before{
+                            transform: translatey(-10px);
+                        }
+                        &::after{
+                            transform: translatey(10px);
+                        }
+                    }
+                    &.open .hamburgermenu{
+                        background-color: transparent;
+                        &::before{
+                            transform: rotate(45deg);
+                        }
+                        &::after{
+                            transform: rotate(-45deg);
+                        }
+                    }
+                }
+            }
         }
         div{
             display: flex;
