--- a/scss/index.css
+++ b/scss/index.css
@@ -34,11 +34,10 @@
   font-size: 3.125rem;
 }
 
-* input {
-  max-width: 350px;
-}
-
 body .fullpage nav {
+  background-color: #fff;
+  -webkit-box-shadow: 0 1px 6px 0 rgba(33, 33, 33, 0.25);
+          box-shadow: 0 1px 6px 0 rgba(33, 33, 33, 0.25);
   height: 8vh;
   position: fixed;
   width: 100%;
@@ -58,6 +57,72 @@ body .fullpage nav .brand {
   font-size: 1.25rem;
   padding: 0;
   margin: 0;
+}
+
+body .fullpage nav button {
+  border: none;
+}
+
+body .fullpage nav button span .hamburger {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+body .fullpage nav button span .hamburger .hamburgermenu {
+  width: 50px;
+  height: 5px;
+  background-color: black;
+  border-radius: 5px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+body .fullpage nav button span .hamburger .hamburgermenu::before, body .fullpage nav button span .hamburger .hamburgermenu::after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 5px;
+  background: black;
+  border-radius: 5px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+body .fullpage nav button span .hamburger .hamburgermenu::before {
+  -webkit-transform: translatey(-10px);
+          transform: translatey(-10px);
+}
+
+body .fullpage nav button span .hamburger .hamburgermenu::after {
+  -webkit-transform: translatey(10px);
+          transform: translatey(10px);
+}
+
+body .fullpage nav button span .hamburger.open .hamburgermenu {
+  background-color: transparent;
+}
+
+body .fullpage nav button span .hamburger.open .hamburgermenu::before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+body .fullpage nav button span .hamburger.open .hamburgermenu::after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 body .fullpage nav div {
