--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -55,6 +55,7 @@
         }
         button{
             border: none;
+            outline: none;
             span{
                 .hamburger{
                     position: relative;
@@ -68,7 +69,7 @@
                     .hamburgermenu{
                         width: 50px;
                         height: 5px;
-                        background-color: black;
+                        background-color: $primary1Color;
                         border-radius: 5px;
                         transition: all 0.5s ease-in-out;
                         &::before, &::after{
@@ -76,7 +77,7 @@
                             position: absolute;
                             width: 40px;
                             height: 5px;
-                            background: black;
+                            background: $primary1Color;
                             border-radius: 5px;
                             transition: all 0.5s ease-in-out;
                         }
