--- a/scss/contact.css
+++ b/scss/contact.css
@@ -61,6 +61,7 @@ body .fullpage nav .brand {
 
 body .fullpage nav button {
   border: none;
+  outline: none;
 }
 
 body .fullpage nav button span .hamburger {
@@ -84,7 +85,7 @@ body .fullpage nav button span .hamburger {
 body .fullpage nav button span .hamburger .hamburgermenu {
   width: 50px;
   height: 5px;
-  background-color: black;
+  background-color: #011627;
   border-radius: 5px;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
@@ -95,7 +96,7 @@ body .fullpage nav button span .hamburger .hamburgermenu::before, body .fullpage
   position: absolute;
   width: 40px;
   height: 5px;
-  background: black;
+  background: #011627;
   border-radius: 5px;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
