--- a/scss/winkelmandje.css
+++ b/scss/winkelmandje.css
@@ -154,8 +154,25 @@ body .fullpage nav div .navigation-list li .active {
   body .fullpage nav div .navigation-list {
     width: 100%;
   }
+  body .fullpage nav div .navigation-list li {
+    padding: 10px 0;
+    width: 100px;
+    border-bottom: 1px solid black;
+  }
+  body .fullpage nav div .navigation-list li a, body .fullpage nav div .navigation-list li ion-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 25px;
+  }
   body .fullpage nav div .navigation-list li:nth-child(5) {
     display: none;
+  }
+  body .fullpage nav div .navigation-list li:last-child {
+    border-bottom: none;
   }
 }
 
