--- a/scss/login.css
+++ b/scss/login.css
@@ -286,7 +286,7 @@ body .fullpage main .login-box .login #form-login {
   position: relative;
 }
 
-body .fullpage main .login-box .login #form-login .foutmelding-login {
+body .fullpage main .login-box .login #form-login .melding-login {
   position: absolute;
   visibility: hidden;
 }
@@ -308,7 +308,7 @@ body .fullpage main .login-box .registreer .registreer-header {
   font-family: cubano, sans-serif;
 }
 
-body .fullpage main .login-box .registreer .foutmelding-registreer {
+body .fullpage main .login-box .registreer .melding-registreer p {
   position: absolute;
   visibility: hidden;
 }
