quick fix genral javascript

--- a/scss/bestel.css
+++ b/scss/bestel.css
@@ -269,12 +269,12 @@ body .fullpage main {
   }
 }
 
-body .fullpage main .row .col-lg-7 img {
+body .fullpage main .row .bestel-foto img {
   width: 45%;
   height: auto;
 }
 
-body .fullpage main .row .col span {
+body .fullpage main .row .bestel-info span {
   height: 25px;
   width: 25px;
   border-radius: 50%;
@@ -284,33 +284,33 @@ body .fullpage main .row .col span {
   margin-top: 20px;
 }
 
-body .fullpage main .row .col span:hover {
+body .fullpage main .row .bestel-info span:hover {
   border: solid 2px black;
 }
 
-body .fullpage main .row .col .dot-r {
+body .fullpage main .row .bestel-info .dot-r {
   background-color: #F02A00;
 }
 
-body .fullpage main .row .col .dot-y {
+body .fullpage main .row .bestel-info .dot-y {
   background-color: #EAF000;
 }
 
-body .fullpage main .row .col .dot-b {
+body .fullpage main .row .bestel-info .dot-b {
   background-color: #00B4F0;
 }
 
-body .fullpage main .row .col .main-container-col2-truck {
+body .fullpage main .row .bestel-info .main-container-col2-truck {
   margin: 0%;
   width: 50px;
   height: auto;
 }
 
-body .fullpage main .row .col .main-container-col2-gratis {
+body .fullpage main .row .bestel-info .main-container-col2-gratis {
   font-weight: 900;
 }
 
-body .fullpage main .row .col .main-container-col2-retour {
+body .fullpage main .row .bestel-info .main-container-col2-retour {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -319,11 +319,11 @@ body .fullpage main .row .col .main-container-col2-retour {
           align-items: flex-start;
 }
 
-body .fullpage main .row .col .main-container-col2-retour p {
+body .fullpage main .row .bestel-info .main-container-col2-retour p {
   margin-left: 10px;
 }
 
-body .fullpage main .row .col .main-container-col2-compinfo {
+body .fullpage main .row .bestel-info .main-container-col2-compinfo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -332,7 +332,7 @@ body .fullpage main .row .col .main-container-col2-compinfo {
           justify-content: space-between;
 }
 
-body .fullpage main .row .col .main-container-col2-compinfo p {
+body .fullpage main .row .bestel-info .main-container-col2-compinfo p {
   font-weight: 900;
 }
 
