--- a/scss/bestel.scss
+++ b/scss/bestel.scss
@@ -14,13 +14,13 @@ body{
                 height: auto;
              }
             .row{
-                .col-lg-7{
+                .bestel-foto{
                     img{
                         width: 45%;
                         height: auto;
                     }
                 }
-                .col{
+                .bestel-info{
                    span {
                         height: 25px;
                         width: 25px;
