--- a/scss/over_ons.css
+++ b/scss/over_ons.css
@@ -12,6 +12,15 @@
   padding: 12px 40px;
 }
 
+* .custom-button-stroke {
+  font-family: proxima-soft, sans-serif;
+  background-color: white !important;
+  color: #ff9f1c;
+  border: solid 2px #ff9f1c !important;
+  border-radius: 5px;
+  padding: 10px 40px;
+}
+
 * p {
   padding: 0;
   margin: 0;
