Bandje kleur kiezen

--- a/scss/bestel.scss
+++ b/scss/bestel.scss
@@ -54,7 +54,8 @@ body{
                         display: flex;
                         align-items: flex-start;
                         p{
-                            margin-left: 10px;;
+                            margin-left: 10px;
+                            margin-bottom: 0px !important;
                         }
                     }
                     .main-container-col2-compinfo{
