--- a/scss/login.scss
+++ b/scss/login.scss
@@ -67,7 +67,9 @@ body {
                             .registreer-stad {}
                         }
                     }
-                    .registreer-checkbox{}
+                    .registreer-checkbox{
+                        #vinkje{}
+                    }
                     .registreer-button{}
                 }
             }
