--- a/scss/bestel.css
+++ b/scss/bestel.css
@@ -51,7 +51,7 @@ body .fullpage nav {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 @media only screen and (max-width: 768px) {
@@ -321,6 +321,7 @@ body .fullpage main .row .bestel-info .main-container-col2-retour {
 
 body .fullpage main .row .bestel-info .main-container-col2-retour p {
   margin-left: 10px;
+  margin-bottom: 0px !important;
 }
 
 body .fullpage main .row .bestel-info .main-container-col2-compinfo {
