--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,9 +13,28 @@ body{
             margin-top: 8vh;
             .row-koop-nu{
                 height: 92vh;
+                position: relative;
+                .eiland{
+                    position: absolute;
+                    top: 100px;
+                    width: 35%;
+                    z-index: -1;
+                    animation: zweef 6s ease-in-out infinite;
+                    transform: translatey(0px);
+                    @keyframes zweef {
+                        0% {
+                            transform: translatey(0px);
+                        }
+                        50% {
+                            transform: translatey(-30px);
+                        }
+                        100% {
+                            transform: translatey(0px);
+                        }
+                    }
+                }
                 .col-koop-nu-foto{
                     img{
-                        max-height: 80%;
                     }
                 }
                 .col-koop-nu-info{
@@ -29,7 +48,7 @@ body{
                     .sun{
                         z-index: -1;
                         top: -200px;
-                        left: 500px;
+                        left: 450px;
                     }
                 }
             }
@@ -46,7 +65,7 @@ body{
                     height: 75%;
                     div{
                       img{
-                        max-width: 80%;
+                        max-width: 58%;
                         height: auto;
                       }
                     }
@@ -54,6 +73,7 @@ body{
                         z-index: -1;
                         top: -50px;
                         left: -350px;
+                        width: 120%;
                     }
                     .cloud2{
                         z-index: -1;
@@ -67,12 +87,12 @@ body{
                 .row-myping-mockup{
                     position: relative;
                     .mockup1{
-                        height: 75%;
+                        height: 65%;
                     }
                     .mockup2{
                         z-index: -1;
                         position: absolute;
-                        height: 71%;
+                        height: 60%;
                         left: 150px;
                         bottom: 125px;
                     }
